@@ -1,6 +1,9 @@
 v3.7.2 (XXXX-XX-XX)
 -------------------
 
+* Make AQL user-defined functions (UDFs) work in a cluster in case the UDF runs
+  an AQL query inside its own function code.
+
 * Improve performance of many non-subquery AQL queries, by optimizing away some
   storage overhead for subquery context data.
 
